# LOGKPREDICT

./: .gitignore  CITATION.cff  DEVELOPMENT.md  LICENSE  LOGKPREDICT  ML_ONE_preds.csv  ML_feat_testONE.csv  ML_inp_testONE.csv  README  README.md  WARP.md  data.py  featurization.py  logk_input  logk_output  model.pt  pyproject.toml
data/IUPAC_v1/: ML_feat_train.csv  ML_inp_train.csv
data/IUPAC_v2/: ML_feat_train.csv  ML_inp_train.csv
data/NIST/: ML_feat_train.csv  ML_inp_train.csv
logk_lib/: __init__.py  exceptions.py  molecular_processing.py  predictor.py
